Fixed diet section mobile title

--- a/styles/style.css
+++ b/styles/style.css
@@ -465,6 +465,11 @@ select {
   }
 
   /* Diet Section */
+  .diet-chart-title {
+    width: 100%;
+    text-align: center;
+    
+  }
   .diet-info {
     flex-direction: column-reverse;
   }
